# organizer-django

./: Dockerfile  justfile  pyproject.toml
api/: admin.py  forms.py  models.py  permissions.py  serializers.py  urls.py  users.py  views.py
api/migrations/: 0001_initial.py
fin_manager/: asgi.py  settings.py  urls.py  wsgi.py
