[tool.poetry]
name = "fin-manager"
version = "0.1.0"
description = ""
authors = ["nicourrrn <s57111702@gmail.com>"]
readme = "README.md"
packages = [{include = "fin_manager"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.3"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
